# locallens-private-ai-summaries

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.codex/agents/: architect.toml  cleanup.toml  cws-policy-reviewer.toml  evolver.toml  extension-runtime-reviewer.toml  implementer.toml  reviewer.toml
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: cloudflare-worker-deploy.md  cws-purple-nickel-remediation.md  cws-red-potassium-remediation.md  privacy-policy.md  publish-surface.md  research.md  test-instructions.md
docs/codex/: architecture.md  cleanup.md  cws-release-strategy.md  evals.md  overview.md  workflow.md
extension/: manifest.json  popup-helpers.js  popup-helpers.test.js  popup.css  popup.html  popup.js
public_site/scripts/: generate-site-content.mjs
public_site/src/: site.js  worker.js
public_site/tests/: routes.test.js  run-routes-check.js
scripts/: build_extension_zip.py  generate_launch_manifest.py  generate_listing_copy.py  generate_marketing_assets.py  render_portfolio_entry.py  render_release_notes.py  reviewer_gate.py
tests/: test_release_helpers.py  test_reviewer_gate.py
