[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "locallens-private-ai-summaries"
version = "0.1.6"
description = "Chrome extension for local summaries, simplification, translation, and safe-share cleanup with Chrome built-in AI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Zack" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2", "playwright>=1.52"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:asyncio"

[tool.setuptools]
py-modules = []
